--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ body {
   border: 4px solid #3DC8FC;
 }
 
+.mealprepgrid {
+  width: 50%;
+  overflow: hidden;
+  border: 4px solid #3DC8FC;
+}
+
 .imagegrid {
   display: grid;
   grid-template-columns: repeat(2, minmax(300px, 1fr));
